cleaned up comment

--- a/webapp/templates/graphs.views.html
+++ b/webapp/templates/graphs.views.html
@@ -187,7 +187,7 @@
 <script type="text/javascript" src="/media/js/plugins/fg.menu.js"></script>
 <script type="text/javascript" src="/media/js/plugins/json2.js"></script>
 
-<!-- Bughunter classes-->
+<!-- data view classes-->
 <script type="text/javascript" src="/media/js/data_views/Bases.js"></script>
 <script type="text/javascript" src="/media/js/data_views/ConnectionsComponent.js"></script>
 <script type="text/javascript" src="/media/js/data_views/DataAdapterCollection.js"></script>
