--- a/datazilla/model/sql/template_schema/schema_objectstore.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_objectstore.sql.tmpl
@@ -1,3 +1,7 @@
+/* This file contains {engine} markers that must be replaced
+   before it is sent to MySQL.
+*/
+
 -- MariaDB dump
 --
 -- Host: localhost    Database: schema_objectstore_1
@@ -16,7 +20,7 @@ CREATE TABLE `objectstore` (
   `error_msg` mediumtext,
   `json_blob` blob,
   PRIMARY KEY (`id`)
-) ENGINE=Aria DEFAULT CHARSET=utf8 PAGE_CHECKSUM=1;
+) ENGINE={engine} DEFAULT CHARSET=utf8;
 
 
 -- Dump completed on 2012-06-05 11:02:48
