code to add records is there, but getting an integrity error adding to nodes: fk violation

--- a/datazilla/model/sql/template_schema/schema_repo.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_repo.sql.tmpl
@@ -33,7 +33,7 @@ CREATE TABLE `files` (
   PRIMARY KEY (`id`),
   KEY `fk_node_id` (`node_id`),
   CONSTRAINT `fk_node_id` FOREIGN KEY (`node_id`) REFERENCES `nodes` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION
-) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='This table holds the list of files for each changeset node. ';
+) ENGINE={engine} DEFAULT CHARSET=utf8 COMMENT='This table holds the list of files for each changeset node. ';
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 --
@@ -53,7 +53,7 @@ CREATE TABLE `nodes` (
   PRIMARY KEY (`id`),
   KEY `fk_push_log` (`push_log_id`),
   CONSTRAINT `fk_push_log` FOREIGN KEY (`push_log_id`) REFERENCES `push_log` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION
-) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='The nodes table holds representations of each changeset node';
+) ENGINE={engine} DEFAULT CHARSET=utf8 COMMENT='The nodes table holds representations of each changeset node';
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 --
@@ -68,8 +68,9 @@ CREATE TABLE `push_log` (
   `push_id` int(11) NOT NULL,
   `date` int(11) DEFAULT NULL,
   `user` varchar(100) DEFAULT NULL,
-  PRIMARY KEY (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='The push_log table holds references to each push.  It is the';
+  PRIMARY KEY (`id`),
+  UNIQUE KEY `push_id_UNIQUE` (`push_id`)
+) ENGINE={engine} DEFAULT CHARSET=utf8 COMMENT='The push_log table holds references to each push.  It is the';
 /*!40101 SET character_set_client = @saved_cs_client */;
 /*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;
 
