changed the objectstore table to use an int instead of timestamp to match perftest

--- a/datazilla/model/sql/template_schema/schema_objectstore.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_objectstore.sql.tmpl
@@ -15,7 +15,7 @@ DROP TABLE IF EXISTS `objectstore`;
 CREATE TABLE `objectstore` (
   `id` int(11) NOT NULL AUTO_INCREMENT,
   `test_run_id` int(11) NULL,
-  `timestamp` timestamp NULL DEFAULT NULL,
+  `date_loaded` int(11) NOT NULL,
   `processed_flag` enum('ready','loading','complete') DEFAULT 'ready',
   `error_flag` enum('N','Y') DEFAULT 'N',
   `error_msg` mediumtext,
