new metrics implementation

--- a/datazilla/model/sql/template_schema/schema_hgmozilla.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_hgmozilla.sql.tmpl
@@ -32,7 +32,7 @@ CREATE TABLE `branches` (
   `uri` varchar(255) NOT NULL,
   PRIMARY KEY (`id`),
   UNIQUE KEY `name_UNIQUE` (`name`)
-) ENGINE={engine} AUTO_INCREMENT=36 DEFAULT CHARSET=utf8;
+) ENGINE={engine} DEFAULT CHARSET=utf8;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 --
