--- a/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
@@ -585,7 +585,7 @@ CREATE TABLE `metric_threshold` (
   `page_id` int(11) NOT NULL,
   `test_run_id` int(11) NOT NULL,
   `revision` varchar(16) NOT NULL,
-  `creation_date` datetime NOT NULL,
+  `creation_date` int(11) NOT NULL,
   KEY `product_id_key` (`product_id`),
   KEY `operating_system_id_key` (`operating_system_id`),
   KEY `processor_key` (`processor`),
@@ -594,7 +594,6 @@ CREATE TABLE `metric_threshold` (
   KEY `page_id_key` (`page_id`),
   KEY `test_run_id_key` (`test_run_id`),
   KEY `revision_key` (`revision`),
-  KEY `creation_date_key` (`creation_date`),
   CONSTRAINT `fk_metric_threshold_product` FOREIGN KEY (`product_id`) REFERENCES `product` (`id`),
   CONSTRAINT `fk_metric_threshold_machine` FOREIGN KEY (`operating_system_id`) REFERENCES `machine` (`operating_system_id`),
   CONSTRAINT `fk_metric_threshold_test` FOREIGN KEY (`test_id`) REFERENCES `test` (`id`),
