changes for metrics

--- a/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
@@ -178,7 +178,7 @@ CREATE TABLE `metric_value` (
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 /*Insert metric values associated with t-test*/
-INSERT INTO `metric_value` (`metric_id`, `name`) VALUES (1, 'std'), (1, 'mean'), (1, 'p_value'), (1, 'h0_rejected');
+INSERT INTO `metric_value` (`metric_id`, `name`) VALUES (1, 'std'), (1, 'mean'), (1, 'p_value'), (1, 'h0_rejected'), (1, 'fdr');
 
 --
 -- Table structure for table `operating_system`
