added requirement for metric threshold updates

--- a/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
@@ -593,7 +593,7 @@ CREATE TABLE `metric_threshold` (
   `page_id` int(11) NOT NULL,
   `test_run_id` int(11) NOT NULL,
   `revision` varchar(16) NOT NULL,
-  `creation_date` int(11) NOT NULL,
+  `push_date` int(11) NOT NULL,
   KEY `product_id_key` (`product_id`),
   KEY `operating_system_id_key` (`operating_system_id`),
   KEY `processor_key` (`processor`),
