--- a/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
@@ -185,7 +185,7 @@ CREATE TABLE `metric_value` (
 /*Insert metric values associated with t-test*/
 LOCK TABLES `metric_value` WRITE;
 /*!40000 ALTER TABLE `metric_value` DISABLE KEYS */;
-INSERT INTO `metric_value` (`metric_id`, `name`) VALUES (1, 'stddev'), (1, 'mean'), (1, 'p'), (1, 'h0_rejected'), (1, 'fdr'), (1, 'trend_stddev'), (1, 'trend_mean'), (1, 'push_id'), (1, 'push_date');
+INSERT INTO `metric_value` (`metric_id`, `name`) VALUES (1, 'stddev'), (1, 'mean'), (1, 'p'), (1, 'h0_rejected'), (1, 'n_replicates'), (1, 'fdr'), (1, 'trend_stddev'), (1, 'trend_mean'), (1, 'pushlog_id'), (1, 'push_date'), (1, 'test_evaluation');
 UNLOCK TABLES;
 
 --
@@ -466,6 +466,7 @@ CREATE TABLE `test_page_metric` (
   KEY `threshold_test_run_id_key` (`threshold_test_run_id`),
   KEY `metric_id_key` (`metric_id`),
   KEY `metric_value_id_key` (`metric_value_id`),
+  KEY `value_key` (`value`),
   CONSTRAINT `fk_test_page_metric_metric` FOREIGN KEY (`metric_id`) REFERENCES `metric` (`id`),
   CONSTRAINT `fk_test_page_metric_metric_value` FOREIGN KEY (`metric_value_id`) REFERENCES `metric_value` (`id`),
   CONSTRAINT `fk_test_page_metric_page` FOREIGN KEY (`page_id`) REFERENCES `pages` (`id`)
