--- a/datazilla/webapp/static/css/summary.css
+++ b/datazilla/webapp/static/css/summary.css
@@ -1,28 +1,67 @@
+body {
+    font-family: helvetica, arial, sans-serif;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    border-top: 2px solid #676767;
+    min-width: 925px;
+}
 div.su-toppanel {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  border: 0 solid #000;
-  background: -moz-linear-gradient(-90deg, #74D435, #43AA00);
-  background: -webkit-gradient(linear, left top, left bottom, from(#74D435), to(#43AA00));
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 0 solid #000;
+    background: -moz-linear-gradient(-90deg, #74D435, #43AA00);
+    background: -webkit-gradient(linear, left top, left bottom, from(#74D435), to(#43AA00));
 
-  height: 50px;
-  width: 95%;
-  margin-top: 20px;
-  padding-top: 10px;
+    height: 50px;
+    width: 95%;
+    margin-top: 20px;
+    padding-top: 10px;
 }
 div.su-panel-base {
 
     width: 93%;
+    height: 300px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
 
     background: white;
 
 }
-
-div.su-progressbar-contianer {
+div.su-main-gauge {
+    float: left;
+    width: 250px;
+    margin-left:10px;
+}
+div.su-reference-info {
+    margin-left:20px;
+    margin-right:20px;
+}
+div.su-dashboard-panel {
+    float: left;
+    margin-top: 40px;
+}
+div.su-spinner {
+  background: transparent url(/static/images/spinner.gif) no-repeat center center;
+  height:280px;
+}
+.su-scroll-panel {
+    overflow-y: auto;
+    height:200px;
+    width:300px;
+}
+.su-no-data {
+    font-size: 18px !important;
+    text-align: center;
+    margin-top: 130px;
+    opacity: 0.8;
 }
 
+/* Progress bar styles */
+div.su-progressbar-container {
+    width: 275px;
+}
 div.su-progressbar-title {
     width: 150px;
     float: left;
@@ -30,11 +69,80 @@ div.su-progressbar-title {
     margin-bottom: 5px;
 }
 div.su-progressbar {
-    width: 50px;
+    width: 70px;
     float: left;
     margin-left: 10px;
     margin-bottom: 5px;
     background: #FF7700;
     color: #44AA00;
+}
+div.su-progressbar-value {
+    float: right;
+    margin-bottom: 5;
+    margin-left: 5;
+}
 
+.su-light-text {
+    opacity: 0.8;
+}
+.su-light-text2 {
+    opacity: 0.5;
+}
+span.su-pass-color {
+    color: #44AA00;
+}
+span.su-fail-color {
+    color: #FF7700;
+}
+span.su-fail-color {
+
+}
+
+
+/* Grid styles */
+div.su-column-headers {
+
+    -webkit-transform:rotate(270deg);
+    -moz-transform:rotate(270deg);
+    -o-transform: rotate(270deg);
+    white-space:nowrap;
+
+    width: 125px;
+
+    position:absolute;
+    left: 260px;
+    top: 365px;
+}
+div.su-row-headers {
+
+    float: left;
+    width: 150px;
+    margin-top: 15px;
+
+}
+div.su-grid-values {
+    float: left;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+    border-top: thin solid;
+    border-left: thin solid;
+}
+div.su-grid-column {
+   width:100px;
+   height:30px;
+}
+div.su-grid-row {
+   float: left;
+   height:30px;
+   width: 150px;
+
+}
+div.su-grid-value {
+    float: left;
+    width: 30px;
+    height: 30px;
+
+    border-bottom: thin solid;
+    border-right: thin solid;
 }
